RESOLVED FIXED170601
REGRESSION (r214553): Allow layout-tests to be run from Xcode without re-directing stdout, stdin and stderr
https://bugs.webkit.org/show_bug.cgi?id=170601
Summary REGRESSION (r214553): Allow layout-tests to be run from Xcode without re-dire...
Jonathan Bedard
Reported 2017-04-07 08:22:28 PDT
<http://trac.webkit.org/changeset/214553> always expects to use TCP for stdout, stdin and stderr on iOS simulators. Both WebKitTestRunnerApp.app and DumpRenderTree.app should allow for stdout, stdin and stderr to be routed to their normal file handles for Xcode debugging if the PORT environment is not defined.
Attachments
Patch (1.86 KB, patch)
2017-04-07 09:10 PDT, Jonathan Bedard
no flags
Patch (1.90 KB, patch)
2017-04-07 09:19 PDT, Jonathan Bedard
no flags
Jonathan Bedard
Comment 1 2017-04-07 08:28:59 PDT
Jonathan Bedard
Comment 2 2017-04-07 09:10:47 PDT
Simon Fraser (smfr)
Comment 3 2017-04-07 09:14:48 PDT
Comment on attachment 306510 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=306510&action=review > Tools/TestRunnerShared/IOSLayoutTestCommunication.cpp:54 > int port = atoi(getenv("PORT")); Why not use portFromEnvironment here?
Jonathan Bedard
Comment 4 2017-04-07 09:19:30 PDT
WebKit Commit Bot
Comment 5 2017-04-07 12:07:36 PDT
Comment on attachment 306511 [details] Patch Clearing flags on attachment: 306511 Committed r215109: <http://trac.webkit.org/changeset/215109>
WebKit Commit Bot
Comment 6 2017-04-07 12:07:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.