REGRESSION (r214553): Allow layout-tests to be run from Xcode without re-directing stdout, stdin and stderr https://bugs.webkit.org/show_bug.cgi?id=170601 <rdar://problem/31492696>

Reviewed by Simon Fraser.

* TestRunnerShared/IOSLayoutTestCommunication.cpp:
(setUpIOSLayoutTestCommunication): Skip TCP setup if no port is in the environment.
(tearDownIOSLayoutTestCommunication): Only teardown if TCP was used.


Canonical link: https://commits.webkit.org/187537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215109 268f45cc-cd09-0410-ab3c-d52691b4dbfc